--- a/index.html
+++ b/index.html
@@ -226,7 +226,8 @@
 			<h2 class="mb-4">Mes Projets</h2>
 		  </div>
 		</div>
-		<div class="row">
+		<div class="sae-box-container">
+			<div class="row">
 		  <div class="col-md-4 col-sm-12 mb-4">
 			<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/SAE_12.png);">
 			  <div class="overlay"></div>
@@ -237,8 +238,9 @@
 				  </a>
 				</h3>
 				<p>
-				  Dans cette SAÉ, je découvre et j’analyse mon réseau informatique personnel afin de comprendre comment il fonctionne et quel est l’impact énergétique de mon usage numérique.
+				  Dans cette SAÉ, je découvre et j’analyse mon réseau informatique personnel afin de comprendre comment il fonctionne.
 				</p>
+				<a href="SAE_12_DROUSSI_MOHAMED.pdf" target="_blank" class="sae-btn">Rapport</a>
 			  </div>
 			</div>
 		  </div>
@@ -252,7 +254,8 @@
 				  </a>
 				</h3>
 				<p>Dans cette SAÉ 13, je découvre le fonctionnement d’un dispositif de transmission en analysant une liaison physique par câble coaxial.</p>
-	    				</div>
+	    		<a href="Droussi_MH-SAE13-Rapport (4).pdf" target="_blank" class="sae-btn">Voir le rapport</a>
+			</div>
     				</div>
   				</div>
 
@@ -266,7 +269,9 @@
 				  		</a>
 							</h3>
 							<p>Dans cette SAÉ 15(en collaboration avec Thales Alenia Space), je participe à la conception d’un système de prise de photos pour banc avionique, avec un site web local, en utilisant un Raspberry Pi, afin de documenter l’état du matériel avant chaque test et gérer les utilisateurs, les photos et leur archivage.</p>
-	    				</div>
+	    				<a href="Thales06_SAE15_rapport.pdf" target="_blank" class="sae-btn">Voir le rapport</a>
+						</div>
+
     				</div>
 
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/SAE_21.png);">
@@ -278,7 +283,9 @@
 				  </a>
 				</h3>
 				<p>Dans cette SAÉ 21, je construis un réseau informatique pour une petite structure, en mettant en place un réseau local avec des équipements de commutation et de routage, ainsi qu’un accès à Internet sécurisé.</p>	
-	    				</div>
+		    	<a href="RAPPORT_SAE21_DROUSSI_SAMPEREZ_GRIRA.pdf" target="_blank" class="sae-btn">Voir le rapport</a>
+			</div>
+
     				</div>
     			</div>
     			<div class="col-md-4">
@@ -291,15 +298,27 @@
 				  						<a href="SAE_22.pdf" download>
 										SAÉ 22 - Mesurer et caractériser un signal ou un système
 				  						</a>
-								<p>Dans cette SAÉ 22,j’analyse des signaux et des systèmes de transmission, en étudiant leur comportement en temps et en fréquence, à travers des simulations Python.</p>
-			    				</div>
-								
+								<p>Dans cette SAÉ 22,j’analyse des signaux et des systèmes de transmission, en étudiant leur comportement à travers des simulations Python.</p>
+								<a href="SAE_22_Projet_Lora.pdf" target="_blank" class="sae-btn">Voir le rapport</a>
+							</div>
 		    				</div>
 	    				</div>
+						<div class="col-md-4 col-sm-12 mb-4">
+ 					 <div id="sae24" class="project img ftco-animate d-flex justify-content-center align-items-center project-square" style="background-image: url(images/SAE_23.png);">
+   					 <div class="overlay"></div>
+    				<div class="text text-center p-4 sae-box">
+      				<h3>
+        			<a href="Enonce-SAE23.pdf" download>SAÉ 24 - Portfolio</a>
+      				</h3>
+      				<p>
+       					 Dans cette SAÉ 24, je crée un portfolio en ligne pour présenter mes compétences, mes projets et mon parcours académique, en utilisant des languages web(HTML,CSS,JS).
+      				</p>
+      					<a href="Rapport_SAE24_Portfolio.pdf" target="_blank" class="sae-btn">Rapport</a>
     				</div>
-    			</div>
-    		</div>
-    	</div>
+  				</div>
+				</div>
+    				</div>
+    			</div>		
     </section>
 
 
