--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		          	<div class="text">
 		          		<span class="subheading">Bonjour !</span>
 			            <h1 class="mb-4 mt-3">Je m'appelle <span>Mohamed Droussi</span></h1>
-			            <h2 class="mb-4">Etudiant en R&T</h2>
+			            <h2 class="mb-4">Etudiant en réseaux et Télécommunications à l'IUT Sophia Antipolis</h2>
 			            <p><a href="https://www.linkedin.com/in/mohamed-droussi/" class="btn btn-primary py-3 px-4">Embauchez Moi</a></p>
 		            </div>
 	      </div>
@@ -70,7 +70,7 @@
     			<div class="col-md-6 col-lg-5 d-flex">
     				<div class="img-about img d-flex align-items-stretch">
     					<div class="overlay"></div>
-	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/simo-removebg-preview.png);">
+	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/photo_portfolio.png);">
 	    				</div>
     				</div>
     			</div>
@@ -240,7 +240,7 @@
 				<p>
 				  Dans cette SAÉ, je découvre et j’analyse mon réseau informatique personnel afin de comprendre comment il fonctionne.
 				</p>
-				<a href="SAE_12_DROUSSI_MOHAMED.pdf" target="_blank" class="sae-btn">Rapport</a>
+				<a href="SAE_12_DROUSSI_MOHAMED.pdf" target="_blank" class="sae-btn">Voir le Rapport</a>
 			  </div>
 			</div>
 		  </div>
@@ -303,21 +303,18 @@
 							</div>
 		    				</div>
 	    				</div>
-						<div class="col-md-4 col-sm-12 mb-4">
- 					 <div id="sae24" class="project img ftco-animate d-flex justify-content-center align-items-center project-square" style="background-image: url(images/SAE_23.png);">
-   					 <div class="overlay"></div>
-    				<div class="text text-center p-4 sae-box">
-      				<h3>
-        			<a href="Enonce-SAE23.pdf" download>SAÉ 24 - Portfolio</a>
-      				</h3>
-      				<p>
-       					 Dans cette SAÉ 24, je crée un portfolio en ligne pour présenter mes compétences, mes projets et mon parcours académique, en utilisant des languages web(HTML,CSS,JS).
-      				</p>
-      					<a href="Rapport_SAE24_Portfolio.pdf" target="_blank" class="sae-btn">Rapport</a>
-    				</div>
-  				</div>
-				</div>
-    				</div>
+				    				<div class="col-md-12">
+		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/images.png);">
+		    					<div class="overlay"></div>
+			    				<div class="text text-center p-4 sae-box">
+			    					<h3>
+				  						<a href="SAÉ25_Portfolio_2024-2025 (2).pdf" download>
+										SAÉ 25 - Portfolio en ligne
+				  						</a>
+										<p class="square-desc">
+        Dans cette SAÉ 25, je crée un portfolio en ligne pour présenter mes compétences, mes projets
+        et mon parcours académique, en utilisant des technologies web modernes.
+      </p>
     			</div>		
     </section>
 
