--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		          	<div class="text">
 		          		<span class="subheading">Bonjour !</span>
 			            <h1 class="mb-4 mt-3">Je m'appelle <span>Mohamed Droussi</span></h1>
-			            <h2 class="mb-4">Etudiant en réseaux et Télécommunications à l'IUT Sophia Antipolis</h2>
+			            <h2 class="mb-4">Etudiant en Réseaux et Télécommunications à l'IUT Sophia Antipolis</h2>
 			            <p><a href="https://www.linkedin.com/in/mohamed-droussi/" class="btn btn-primary py-3 px-4">Embauchez Moi</a></p>
 		            </div>
 	      </div>
